--- a/mumbletemps/templates/mumbletemps/login.html
+++ b/mumbletemps/templates/mumbletemps/login.html
@@ -29,44 +29,73 @@
         <div class="col-sm-12">
             <div style="margin-top:25px">
                 <div class="col-md-12 text-center">
-                    <img class="ra-avatar img-circle" src="{{link.creator.portrait_url_128}}"><br><br>
-                    <h4>{{link.creator.character_name}} has invited you to join Mumble!</h4>
-                    <p>Time Remaining: <span id="countdown{{link.link_ref}}"></span></p>
-                    <p><span class="label label-info">Link Ref: {{link.link_ref}}</span></p>
-                        <br>
-                    <form action="{% url 'mumbletemps:join' link.link_ref %}" method="post">
-                        {% csrf_token %}
-
-                        <input type="hidden" name="sso" value="True" />
-                        <input type="image" class="img-responsive center-block" src="{% static 'img/sso/EVE_SSO_Login_Buttons_Large_Black.png' %}" border=0 alt="Login with SSO" />
-
-                    </form>
-                    <div class="clearfix"></div><br>
-                    <div class="col-md-4 col-md-offset-4 col-sm-12">
-                        <div class="panel panel-default">
-                            <div class="panel-heading text-center">
-                                <h4>No SSO</h4>
-                            </div>
-                            <div class="panel-body text-left">
-                                <div class="form-group">
-                                    <form action="{% url 'mumbletemps:join' link.link_ref %}" method="post">
-                                        {% csrf_token %}
-
-                                        <input type="hidden" name="sso" value="False" />
-
-                                        <p class="text-center">If you cannot SSO with your EVE character, You can enter your own details below.</p>
-                                        <label for="name">Name</label>
-                                        <input type="text" class="form-control" name="name" placeholder="Who are you?">
-                                        <br>
-                                        <label for="association">Association</label>
-                                        <input type="text" class="form-control" name="association" placeholder="Who are you with?">
-                                        <br>
-                                        <button type="submit" value="Submit" class="btn col-md-12 btn-primary">Login Without SSO</button>
-                                    </form>
+                    <img class="ra-avatar img-circle" src="{{ link.creator.portrait_url_128 }}"><br><br>
+                    <h4>{{ link.creator.character_name }} has invited you to join Mumble!</h4>
+                    <p>Time Remaining: <span id="countdown{{ link.link_ref }}"></span></p>
+                    <p><span class="label label-info">Link Ref: {{ link.link_ref }}</span></p>
+                    <br>
+                    {% if connect_url %}
+                        <a class="btn btn-primary" href="mumble://{{ connect_url }}">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8f/Icons_mumble.svg/400px-Icons_mumble.svg.png"
+                                 alt="Mumble" height="64" width="64" style="margin: 15px;">
+                            <span style="margin: 15px;">Click to Join Mumble as: <b>{{ temp_user.name }}</b></span><br>
+                        </a>
+                    {% else %}
+                        <a href="{% url "mumbletemps:join" link.link_ref %}?sso=True">
+                            <img src="{% static 'img/sso/EVE_SSO_Login_Buttons_Large_Black.png' %}"
+                                 class="img-responsive center-block">
+                        </a>
+                    {% endif %}
+                    <div class="clearfix"></div>
+                    <br>
+                    {% if temp_user %}
+                        <div class="col-md-4 col-md-offset-4 col-sm-12">
+                            <div class="panel panel-default">
+                                <div class="panel-heading text-center">
+                                    <h4>Manual Connect</h4>
+                                </div>
+                                <div class="panel-body">
+                                    <p>If you have problems with the application link above. <br>Please use the
+                                        following in Mumble's connection dialog</p>
+                                    <p>Mumble Url: <span class="badge">{{ mumble }}</span></p>
+                                    <p>Username: <span class="badge">{{ temp_user.username }}</span></p>
+                                    <p>Password: <span class="badge">{{ temp_user.password }}</span></p>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    {% else %}
+                        <div class="col-md-4 col-md-offset-4 col-sm-12">
+                            <div class="panel panel-default">
+                                <div class="panel-heading text-center">
+                                    <h4>No SSO</h4>
+                                </div>
+                                <div class="panel-body text-left">
+                                    <div class="form-group">
+                                        <form action="{% url 'mumbletemps:join' link.link_ref %}" method="post">
+                                            {% csrf_token %}
+
+                                            <input type="hidden" name="sso" value="False"/>
+
+                                            <p class="text-center">If you cannot SSO with your EVE character, You can
+                                                enter
+                                                your own details below.</p>
+                                            <label for="name">Name</label>
+                                            <input type="text" class="form-control" name="name"
+                                                   placeholder="Who are you?">
+                                            <br>
+                                            <label for="association">Association</label>
+                                            <input type="text" class="form-control" name="association"
+                                                   placeholder="Who are you with?">
+                                            <br>
+                                            <button type="submit" value="Submit" class="btn col-md-12 btn-primary">Login
+                                                Without SSO
+                                            </button>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    {% endif %}
                 </div>
             </div>
         </div>
@@ -78,11 +107,11 @@
     var locale = "{{ LANGUAGE_CODE }}";
 
     var timers = [
-            {
-                'id': "{{ link.link_ref }}",
-                'targetDate': moment("{{ link.expires|print_timestamp| date:"c" }}"),
-                'expired': false
-            }
+        {
+            'id': "{{ link.link_ref }}",
+            'targetDate': moment("{{ link.expires|print_timestamp| date:"c" }}"),
+            'expired': false
+        }
     ];
 
     moment.locale(locale);
@@ -97,9 +126,9 @@
         updateAllTimers();
     }
 
-    function updateAllTimers () {
+    function updateAllTimers() {
         var l = timers.length;
-        for (var i=0; i < l; ++i) {
+        for (var i = 0; i < l; ++i) {
             if (timers[i].expired) continue;
             updateTimer(timers[i]);
         }
